Reorganização do MVC
O MVC foi reorganizado entre a parte a ser exibida para o usuário, os arquivos de configuração de rotas e as Controllers.

--- a/App/.htaccess
+++ b/App/.htaccess
@@ -1,8 +1,2 @@
-RewriteEngine on
-RewriteCond %{SCRIPT_FILENAME} !-f
-RewriteCond %{SCRIPT_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?url=$1
-
-#desabilitar a listagem de pastas para o servidor
+#Retira a indexação dos diretórios do sistema
 Options -Indexes
-
